Fix footer whitespace

--- a/css/about.css
+++ b/css/about.css
@@ -26,8 +26,8 @@
 }
 
 @media only screen and (max-width: 700px), only screen and (max-device-width: 700px) {
-  body {
-    min-height: 90vh;
+  .flex-wrapper {
+    min-height: 80vh;
   }
   .about_image {
     background: url('../images/about_mobile.png') no-repeat;
